Fixed where resources are pulled